Add new tests and cleanup a bit.
Depends on your definition of cleanup.

--- a/websocket.html
+++ b/websocket.html
@@ -2,7 +2,11 @@
   <head>
     <title>Websocket Testing</title>
   </head>
-  <body>
+    <body>
+    <h1>Open Websocket Test</h1>
+    <!-- <div><input type="button" onclick="openWebsocketTime()"></input></div> -->
+    <h3>Open Test</h3>
+    <div id="open-test-status"></div>
     <ul id="messages"> </ul>
     <script src="websocket.js"> </script>
   </body>
